<resources>
    <string name="app_name">Examen Ocampo/Quiroz 3CV2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="snom">Nombre
        (para dar de alta)</string>
    <string name="sid">ID\'s (para dar de baja)</string>
    <string name="ins">Registrar</string>
    <string name="cons">Lista</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="salir">Salir</string>
    <string name="tabla_de_registros">Tabla de Registros</string>
</resources>
